feat: add Channel model & commentModel
